# rlox

./: .gitmodules  Cargo.toml  LICENSE  README.md  rustfmt.toml
integration/: Cargo.toml
integration/lox-tests/: README.md
integration/src/: lib.rs
interpreter/: Cargo.toml
interpreter/src/: eval.rs  main.rs  pretty_printer.rs  repl.rs
interpreter/tests/: integration.rs
lox-tests/variable/: use_nil_as_var.lox  use_this_as_var.lox
parser/: Cargo.toml
parser/src/: ast.rs  errors.rs  ext.rs  lib.rs  peek.rs  resolver.rs  scanner.rs
src/: environment.rs  errors.rs  eval.rs  main.rs  multipeek.rs  parser.rs  pretty_printer.rs  repl.rs  resolver.rs  scanner.rs  tests.rs  value.rs
src/examples/: if_statement.lox.out  logical_operators.lox  logical_operators.lox.out  simple_env.lox  variables_and_scope.lox  variables_and_scope.lox.out  while_loop.lox
src/parser/: ast.rs  errors.rs  mod.rs  scanner.rs
src/value/: callable.rs  class.rs  instance.rs  mod.rs
tests/: class.lox  functions.lox  if_statement.lox  inheritance.lox  integration.rs  loop_break.lox  native.lox
tests/lox/: arithmetic.lox  arithmetic.lox.out  class.lox  class.lox.out  divide_by_zero.lox  divide_by_zero.lox.out  equality.lox  equality.lox.out  fibonacci.lox  for_loop.lox  for_loop.lox.out  functions.lox  functions.lox.out  if_statement.lox  inheritance.lox  inheritance.lox.out  (+10 more)
vm/: Cargo.toml  bound.lox  closure.lox  test.sh
vm/src/: chunk.rs  compile.rs  debug.rs  main.rs  native.rs  value.rs  vm.rs
vm/src/gc/: arena.rs  mod.rs  object.rs  value.rs
vm/tests/: integration.rs
(+5 files in other folders)
