[package]
name = "vm"
version = "0.1.0"
authors = ["Christian Briones <cwbriones@gmail.com>"]

[dependencies]
failure = "0.1.1"
log = "*"
parser = { path = "../parser" }
broom = { path = "../broom" }
integration = { path = "../integration" }
env_logger = "*"

[features]
default = []
op-immediate = []
dis = []
